src/test/ui/issues/issue-26237.stderr
error[E0618]: expected function, found `{integer}`
  --> $DIR/issue-26237.rs:13:9
   |
LL |         $not_a_function($some_argument)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a function
...
LL |     let mut value_a = 0;
   |         ----------- `{integer}` defined here
LL |     let mut value_b = 0;
LL |     macro_panic!(value_a, value_b);
   |     ------------------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
